--- a/scss/rcss_colores_01.scss
+++ b/scss/rcss_colores_01.scss
@@ -631,6 +631,18 @@ $lista_cat_precio: #000;
 $modal_carta_ttl: #000;
 $modal_carta_sttl: #000;
 
+$producto1_nombre: #000;
+$producto1_descripcion: #000;
+$producto1_precio: #000;
+
+$producto2_nombre: #000;
+$producto2_descripcion: #000;
+$producto2_precio: #000;
+
+$producto3_nombre: #000;
+$producto3_descripcion: #000;
+$producto3_precio: #000;
+
 body {
     .contenedor {
         .modals{
@@ -652,13 +664,13 @@ body {
                                             background: $producto_cont_background;
                                             .cont_info_pro{
                                                 .nombre{
-
+                                                    color: $producto1_nombre;
                                                 }
                                                 .descripcion{
-
+                                                    color: $producto1_descripcion;
                                                 }
                                                 .precio{
-                                                    
+                                                    color: $producto1_precio;
                                                 }
                                             }
                                         }
@@ -686,13 +698,13 @@ body {
                                                 td {
                                                     .cont_data {
                                                         .nombre {
-
+                                                            color: $producto2_nombre;
                                                         }
                                                         .descripcion {
-                                                            
+                                                            color: $producto2_descripcion;
                                                         }
                                                         .precio {
-                                                            
+                                                            color: $producto2_precio;
                                                         }
                                                     }
                                                     .foto {
@@ -723,13 +735,13 @@ body {
                                             .cont_pr {
                                                 .cont_prod {
                                                     .nombre {
-
+                                                        color: $producto3_nombre;
                                                     }
                                                     .descripcion {
-                                                        
+                                                        color: $producto3_descripcion;
                                                     }
                                                     .precio {
-                                                        
+                                                        color: $producto3_precio;
                                                     }
                                                 }
                                             }
