--- a/css/rcss_colores_01.css
+++ b/css/rcss_colores_01.css
@@ -190,6 +190,24 @@ body .contenedor .modals .cont_modals .modal_carta .cont_modal .cont_info .info_
   background: #900;
   color: #fff;
 }
+body .contenedor .modals .cont_modals .modal_carta .cont_modal .cont_info .info_modal .lista_categorias .promocion .cont_fondo .cont_detalle_pro .cont_detalle_pro_np .nombre {
+  color: #000;
+}
+body .contenedor .modals .cont_modals .modal_carta .cont_modal .cont_info .info_modal .lista_categorias .promocion .cont_fondo .cont_detalle_pro .cont_detalle_pro_np .precio {
+  color: #000;
+}
+body .contenedor .modals .cont_modals .modal_carta .cont_modal .cont_info .info_modal .lista_categorias .promocion .cont_fondo .cont_detalle_pro .descripcion {
+  color: #000;
+}
+body .contenedor .modals .cont_modals .modal_carta .cont_modal .cont_info .info_modal .lista_categorias .promocion .cont_fondoi .nombre {
+  color: #000;
+}
+body .contenedor .modals .cont_modals .modal_carta .cont_modal .cont_info .info_modal .lista_categorias .promocion .cont_fondoi .descripcion {
+  color: #000;
+}
+body .contenedor .modals .cont_modals .modal_carta .cont_modal .cont_info .info_modal .lista_categorias .promocion .cont_fondoi .precio {
+  color: #000;
+}
 body .contenedor .modals .cont_modals .modal_carta .cont_modal .cont_info .info_modal .lista_categorias .categoria .cont_fondo .cont_fondoi .nombre {
   color: #000;
 }
