--- a/css/rcss_fontsize_01.css
+++ b/css/rcss_fontsize_01.css
@@ -84,6 +84,12 @@ body .contenedor .modals .cont_modals .paso_02b .cont_modal .acciones {
 /* MODALS PASO 4 LOCALES CARRO */
 /* MODALS PASO 4 LOCALES CARRO */
 /* MODALS PASO PREGUNTAS */
+body .contenedor .modals .cont_modals .modal_pregunta_productos .cont_modal .cont_info .info_modal .s_pregunta .e_pregunta .pregunta_titulo {
+  font-size: 18px;
+}
+body .contenedor .modals .cont_modals .modal_pregunta_productos .cont_modal .cont_info .info_modal .s_pregunta .e_pregunta .titulo_v_pregunta {
+  font-size: 12px;
+}
 /* MODALS PASO PREGUNTAS */
 /* MODALS PASO PROMOCION */
 /* MODALS PASO PROMOCION */
