--- a/scss/rcss_colores_01.scss
+++ b/scss/rcss_colores_01.scss
@@ -35,6 +35,7 @@ $btn_prin_nombre: #000;
 $btn_prin_desc: #000;
 $btn_prin_precio: #000;
 
+$cantcart_num: #000;
 
 /* PAGINA PRINCIPAL HEADER-CATEGORIAS-FOOTER */
 body {
@@ -51,7 +52,7 @@ body {
                         .shop { color: $header_cart_color; }
                         .cantcart {
                             background: $header_cant_cart_color;
-                            .cantcart_num{}
+                            .cantcart_num{ color: $cantcart_num }
                         }
                     }
                     .cart_info{ color: $header_cart_mensaje }
@@ -517,6 +518,9 @@ body {
 $modal_preguntas_border_color: #ccc;
 $modal_preguntas_selected_color: #ccc;
 
+$pregunta_titulo_color: #000;
+$pregunta_desc_color: #000;
+
 body {
     .contenedor {
         .modals{
@@ -525,8 +529,8 @@ body {
                     .cont_modal {
                         .titulo {
                             .cont_titulo {
-                                h1{}
-                                h2{}
+                                h1{ color: $modal_pregunta_ttl }
+                                h2{ color: $modal_pregunta_sttl }
                             }
                         }
                         .close {}
@@ -534,8 +538,8 @@ body {
                             .info_modal {
                                 .s_pregunta {
                                     .e_pregunta {
-                                        .pregunta_titulo{}
-                                        .titulo_v_pregunta{}
+                                        .pregunta_titulo{ color: $pregunta_titulo_color }
+                                        .titulo_v_pregunta{ color: $pregunta_desc_color }
                                         .v_pregunta{
                                             border-top-color: $modal_preguntas_border_color;
                                             border-left-color: $modal_preguntas_border_color;
