--- a/css/rcss_colores_01.css
+++ b/css/rcss_colores_01.css
@@ -65,6 +65,12 @@ body .contenedor .modals .cont_modals .modal .cont_modal .acciones {
 }
 /* MODALS BASE */
 /* MODALS PASO 01 CARRO */
+body .contenedor .modals .cont_modals .modal .cont_modal .titulo .cont_titulo h1 {
+  color: #000;
+}
+body .contenedor .modals .cont_modals .modal .cont_modal .titulo .cont_titulo h2 {
+  color: #000;
+}
 body .contenedor .modals .cont_modals .modal .cont_modal .cont_info .info_modal .process_carro .process_carro_promo {
   background: #f5f5f5;
 }
@@ -74,8 +80,35 @@ body .contenedor .modals .cont_modals .modal .cont_modal .cont_info .info_modal 
 body .contenedor .modals .cont_modals .modal .cont_modal .cont_info .info_modal .process_carro .process_carro_restantes .restantes_detalle_item {
   border-top-color: #ddd;
 }
+body .contenedor .modals .cont_modals .modal .cont_modal .cont_info .info_modal .process_carro .process_carro_restantes .restantes_detalle_item .restantes_detalle_nombre {
+  color: #000;
+}
+body .contenedor .modals .cont_modals .modal .cont_modal .cont_info .info_modal .process_carro .process_carro_restantes .restantes_detalle_item .restantes_detalle_acciones .precio {
+  color: #000;
+}
+body .contenedor .modals .cont_modals .modal .cont_modal .cont_info .info_modal .process_carro .process_carro_restantes .restantes_detalle_item .restantes_detalle_acciones .pregunta {
+  color: #000;
+}
+body .contenedor .modals .cont_modals .modal .cont_modal .cont_info .info_modal .process_carro .process_carro_restantes .restantes_detalle_item .restantes_detalle_acciones .accion {
+  color: #000;
+}
+body .contenedor .modals .cont_modals .modal .cont_modal .sub_total .cont_subtotal .total_detalle .paso_01_sub_total {
+  color: #000;
+}
+body .contenedor .modals .cont_modals .modal .cont_modal .sub_total .cont_subtotal .total_detalle .paso_03_costo {
+  color: #000;
+}
+body .contenedor .modals .cont_modals .modal .cont_modal .sub_total .cont_subtotal .total_detalle .paso_03_total {
+  color: #000;
+}
 /* MODALS PASO 01 CARRO */
 /* MODALS PASO 02 CARRO */
+body .contenedor .modals .cont_modals .paso_02 .cont_modal .titulo .cont_titulo h1 {
+  color: #000;
+}
+body .contenedor .modals .cont_modals .paso_02 .cont_modal .titulo .cont_titulo h2 {
+  color: #000;
+}
 body .contenedor .modals .cont_modals .paso_02 .cont_modal .cont_info .info_modal .cont_direccion .direccion_opciones .dir_op {
   background: #ddd;
 }
@@ -84,6 +117,12 @@ body .contenedor .modals .cont_modals .paso_02 .cont_modal .cont_info .info_moda
 }
 /* MODALS PASO 02 CARRO */
 /* MODALS PASO 02A LOCALES CARRO */
+body .contenedor .modals .cont_modals .paso_02a .cont_modal .titulo .cont_titulo h1 {
+  color: #000;
+}
+body .contenedor .modals .cont_modals .paso_02a .cont_modal .titulo .cont_titulo h2 {
+  color: #000;
+}
 body .contenedor .modals .cont_modals .paso_02a .cont_modal .cont_info .info_modal .cont_direccion .direccion_op1 .parent_locales .cont_map {
   background: #ddd;
 }
