--- a/css/rcss_fontsize_01.css
+++ b/css/rcss_fontsize_01.css
@@ -73,6 +73,15 @@ body .contenedor .modals .cont_modals .paso_02 .cont_modal .cont_info .info_moda
 }
 /* MODALS PASO 02 CARRO */
 /* MODALS PASO 02A LOCALES CARRO */
+body .contenedor .modals .cont_modals .paso_02a .cont_modal .cont_info .info_modal .cont_direccion .direccion_op1 .parent_locales .dir_locales .cont_local .left_acciones .local_info .title {
+  font-size: 18px;
+}
+body .contenedor .modals .cont_modals .paso_02a .cont_modal .cont_info .info_modal .cont_direccion .direccion_op1 .parent_locales .dir_locales .cont_local .left_acciones .local_info .stitle {
+  font-size: 18px;
+}
+body .contenedor .modals .cont_modals .paso_02a .cont_modal .cont_info .info_modal .cont_direccion .direccion_op1 .parent_locales .dir_locales .cont_local .left_acciones .local_info .alert {
+  font-size: 18px;
+}
 /* MODALS PASO 02A LOCALES CARRO */
 /* MODALS PASO 02B LOCALES CARRO */
 body .contenedor .modals .cont_modals .paso_02b .cont_modal .acciones {
@@ -157,6 +166,15 @@ body .contenedor .modals .cont_modals .modal_carta .cont_modal .cont_info .info_
 /* MODALS PAGINA */
 /* MODALS PAGINA */
 /* MODALS ERROR LOCALES */
+body .contenedor .modals .cont_modals .paso_02a .cont_modal .cont_info .info_modal .cont_direccion .direccion_op1 .parent_locales .dir_locales .cont_local .left_acciones .local_info .title {
+  font-size: 18px;
+}
+body .contenedor .modals .cont_modals .paso_02a .cont_modal .cont_info .info_modal .cont_direccion .direccion_op1 .parent_locales .dir_locales .cont_local .left_acciones .local_info .stitle {
+  font-size: 18px;
+}
+body .contenedor .modals .cont_modals .paso_02a .cont_modal .cont_info .info_modal .cont_direccion .direccion_op1 .parent_locales .dir_locales .cont_local .left_acciones .local_info .alert {
+  font-size: 18px;
+}
 /* MODALS ERROR LOCALES */
 /* MODALS ERROR */
 /* MODALS ERROR */
