--- a/css/rcss_fontsize_01.css
+++ b/css/rcss_fontsize_01.css
@@ -157,6 +157,24 @@ body .contenedor .modals .cont_modals .modal_carta .cont_modal .cont_info .info_
 body .contenedor .modals .cont_modals .modal_carta .cont_modal .cont_info .info_modal .lista_productos .producto3 .pro_fondo .cont_pr .cont_prod .precio {
   font-size: 18px;
 }
+body .contenedor .modals .cont_modals .modal_carta .cont_modal .cont_info .info_modal .lista_categorias .promocion .cont_fondo .cont_detalle_pro .cont_detalle_pro_np .nombre {
+  font-size: 18px;
+}
+body .contenedor .modals .cont_modals .modal_carta .cont_modal .cont_info .info_modal .lista_categorias .promocion .cont_fondo .cont_detalle_pro .cont_detalle_pro_np .precio {
+  font-size: 18px;
+}
+body .contenedor .modals .cont_modals .modal_carta .cont_modal .cont_info .info_modal .lista_categorias .promocion .cont_fondo .cont_detalle_pro .descripcion {
+  font-size: 14px;
+}
+body .contenedor .modals .cont_modals .modal_carta .cont_modal .cont_info .info_modal .lista_categorias .promocion .cont_fondoi .nombre {
+  font-size: 18px;
+}
+body .contenedor .modals .cont_modals .modal_carta .cont_modal .cont_info .info_modal .lista_categorias .promocion .cont_fondoi .descripcion {
+  font-size: 14px;
+}
+body .contenedor .modals .cont_modals .modal_carta .cont_modal .cont_info .info_modal .lista_categorias .promocion .cont_fondoi .precio {
+  font-size: 18px;
+}
 body .contenedor .modals .cont_modals .modal_carta .cont_modal .cont_info .info_modal .lista_categorias .categoria .cont_fondo .cont_fondoi .nombre {
   font-size: 18px;
 }
