--- a/scss/rcss_fontsize_01.scss
+++ b/scss/rcss_fontsize_01.scss
@@ -538,6 +538,10 @@ body {
 
 
 /* MODALS PASO PROMOCION */
+
+$pro_cat_item_nombre: 18px;
+$pro_cat_item_descripcion: 12px;
+
 body {
     .contenedor {
         .modals{
@@ -558,8 +562,8 @@ body {
                                         .pro_cat_item_select {
                                             select{}
                                         }
-                                        .pro_cat_item_nombre{}
-                                        .pro_cat_item_descripcion{}
+                                        .pro_cat_item_nombre{ color: $pro_cat_item_nombre }
+                                        .pro_cat_item_descripcion{ color: $pro_cat_item_descripcion }
                                     }
                                 }
                             }
