--- a/scss/rcss_fontsize_01.scss
+++ b/scss/rcss_fontsize_01.scss
@@ -562,8 +562,8 @@ body {
                                         .pro_cat_item_select {
                                             select{}
                                         }
-                                        .pro_cat_item_nombre{ color: $pro_cat_item_nombre }
-                                        .pro_cat_item_descripcion{ color: $pro_cat_item_descripcion }
+                                        .pro_cat_item_nombre{ font-size: $pro_cat_item_nombre }
+                                        .pro_cat_item_descripcion{ font-size: $pro_cat_item_descripcion }
                                     }
                                 }
                             }
