--- a/css/rcss_colores_01.css
+++ b/css/rcss_colores_01.css
@@ -74,6 +74,21 @@ body .contenedor .modals .cont_modals .modal .cont_modal .titulo .cont_titulo h2
 body .contenedor .modals .cont_modals .modal .cont_modal .cont_info .info_modal .process_carro .process_carro_promo {
   background: #f5f5f5;
 }
+body .contenedor .modals .cont_modals .modal .cont_modal .cont_info .info_modal .process_carro .process_carro_promo .promo_info {
+  color: #000;
+}
+body .contenedor .modals .cont_modals .modal .cont_modal .cont_info .info_modal .process_carro .process_carro_promo .promo_precio {
+  color: #000;
+}
+body .contenedor .modals .cont_modals .modal .cont_modal .cont_info .info_modal .process_carro .process_carro_promo .promo_delete {
+  color: #000;
+}
+body .contenedor .modals .cont_modals .modal .cont_modal .cont_info .info_modal .process_carro .process_carro_promo .promo_detalle .promo_detalle_item .promo_detalle_nombre {
+  color: #000;
+}
+body .contenedor .modals .cont_modals .modal .cont_modal .cont_info .info_modal .process_carro .process_carro_promo .promo_detalle .promo_detalle_item .promo_detalle_acciones {
+  color: #000;
+}
 body .contenedor .modals .cont_modals .modal .cont_modal .cont_info .info_modal .process_carro .process_carro_restantes {
   background: #f5f5f5;
 }
