--- a/css/rcss_colores_01_basico.css
+++ b/css/rcss_colores_01_basico.css
@@ -10,10 +10,13 @@ body .contenedor .menu_left .cont_menu_left .menu_info h1 {
 }
 body .contenedor .menu_left .cont_menu_left .menu_info .lista_paginas a {
   color: #000;
-  border-bottom-color: #ddd;
+  border-bottom-color: #941C80;
 }
 
 /* PAGINA PRINCIPAL HEADER-CATEGORIAS-FOOTER */
+body .contenedor {
+  color: #000;
+}
 body .contenedor .pagina .cont_pagina .header {
   background: #fff;
   border-bottom-color: #941C80;
@@ -22,27 +25,11 @@ body .contenedor .pagina .cont_pagina .header .menu_right .shop {
   color: #941C80;
 }
 body .contenedor .pagina .cont_pagina .header .menu_right .cantcart {
-  background: #F9DDF3;
-}
-body .contenedor .pagina .cont_pagina .header .menu_right .cantcart .cantcart_num {
-  color: #000;
-}
-body .contenedor .pagina .cont_pagina .header .cart_info {
-  color: #000;
+  background: #941C80;
 }
 body .contenedor .pagina .cont_pagina .contenido {
   background: #e8e8e8;
 }
-body .contenedor .pagina .cont_pagina .contenido .cont_contenido .botones_principales .cont_bp .cont_bpi .nombre {
-  color: #000;
-}
-body .contenedor .pagina .cont_pagina .contenido .cont_contenido .botones_principales .cont_bp .cont_bpi .descripcion {
-  color: #000;
-}
-body .contenedor .pagina .cont_pagina .contenido .cont_contenido .botones_principales .cont_bp .cont_bpi .precio {
-  color: #000;
-}
-
 /* PAGINA PRINCIPAL HEADER-CATEGORIAS-FOOTER */
 /* MODALS BASE */
 body .contenedor .modals .cont_modals .modal {
@@ -50,71 +37,28 @@ body .contenedor .modals .cont_modals .modal {
 }
 body .contenedor .modals .cont_modals .modal .cont_modal .titulo {
   background: #f5f5f5;
-  border-bottom-color: #999;
+  border-bottom-color: #941C80;
 }
 body .contenedor .modals .cont_modals .modal .cont_modal .close {
   color: #999;
-  background: none;
 }
 body .contenedor .modals .cont_modals .modal .cont_modal .sub_total {
   background: #ddd;
 }
 body .contenedor .modals .cont_modals .modal .cont_modal .acciones {
-  border-top-color: #999;
-  background: #ddd;
+  border-top-color: #941C80;
+  background: #f5f5f5;
 }
 /* MODALS BASE */
 /* MODALS PASO 01 CARRO */
-body .contenedor .modals .cont_modals .modal .cont_modal .titulo .cont_titulo h1 {
-  color: #000;
-}
-body .contenedor .modals .cont_modals .modal .cont_modal .titulo .cont_titulo h2 {
-  color: #000;
-}
 body .contenedor .modals .cont_modals .modal .cont_modal .cont_info .info_modal .process_carro .process_carro_promo {
   background: #f5f5f5;
-}
-body .contenedor .modals .cont_modals .modal .cont_modal .cont_info .info_modal .process_carro .process_carro_promo .promo_info {
-  color: #000;
-}
-body .contenedor .modals .cont_modals .modal .cont_modal .cont_info .info_modal .process_carro .process_carro_promo .promo_precio {
-  color: #000;
-}
-body .contenedor .modals .cont_modals .modal .cont_modal .cont_info .info_modal .process_carro .process_carro_promo .promo_delete {
-  color: #000;
-}
-body .contenedor .modals .cont_modals .modal .cont_modal .cont_info .info_modal .process_carro .process_carro_promo .promo_detalle .promo_detalle_item .promo_detalle_nombre {
-  color: #000;
-}
-body .contenedor .modals .cont_modals .modal .cont_modal .cont_info .info_modal .process_carro .process_carro_promo .promo_detalle .promo_detalle_item .promo_detalle_acciones {
-  color: #000;
 }
 body .contenedor .modals .cont_modals .modal .cont_modal .cont_info .info_modal .process_carro .process_carro_restantes {
   background: #f5f5f5;
 }
 body .contenedor .modals .cont_modals .modal .cont_modal .cont_info .info_modal .process_carro .process_carro_restantes .restantes_detalle_item {
-  border-top-color: #ddd;
-}
-body .contenedor .modals .cont_modals .modal .cont_modal .cont_info .info_modal .process_carro .process_carro_restantes .restantes_detalle_item .restantes_detalle_nombre {
-  color: #000;
-}
-body .contenedor .modals .cont_modals .modal .cont_modal .cont_info .info_modal .process_carro .process_carro_restantes .restantes_detalle_item .restantes_detalle_acciones .precio {
-  color: #000;
-}
-body .contenedor .modals .cont_modals .modal .cont_modal .cont_info .info_modal .process_carro .process_carro_restantes .restantes_detalle_item .restantes_detalle_acciones .pregunta {
-  color: #000;
-}
-body .contenedor .modals .cont_modals .modal .cont_modal .cont_info .info_modal .process_carro .process_carro_restantes .restantes_detalle_item .restantes_detalle_acciones .accion {
-  color: #000;
-}
-body .contenedor .modals .cont_modals .modal .cont_modal .sub_total .cont_subtotal .total_detalle .paso_01_sub_total {
-  color: #000;
-}
-body .contenedor .modals .cont_modals .modal .cont_modal .sub_total .cont_subtotal .total_detalle .paso_03_costo {
-  color: #000;
-}
-body .contenedor .modals .cont_modals .modal .cont_modal .sub_total .cont_subtotal .total_detalle .paso_03_total {
-  color: #000;
+  border-bottom-color: #ddd;
 }
 /* MODALS PASO 01 CARRO */
 /* MODALS PASO 02 CARRO */
@@ -392,4 +336,4 @@ body .contenedor .modals .cont_modals .modal_contacto .cont_modal .titulo .cont_
 /* MODALS PAGINA INICIO */
 /* MODALS PAGINA INICIO */
 
-/*# sourceMappingURL=rcss_colores_01.css.map */
+/*# sourceMappingURL=rcss_colores_01_basico.css.map */
