--- a/css/rcss_tipo_01.css
+++ b/css/rcss_tipo_01.css
@@ -153,9 +153,9 @@ body .contenedor .modals .cont_modals .modal .cont_modal .cont_info .info_modal 
   padding: 20px 6px 10px 6px;
 }
 body .contenedor .modals .cont_modals .modal .cont_modal .cont_info .info_modal .process_carro .process_carro_restantes .restantes_detalle_item {
-  margin-bottom: 10px;
-  border-top-style: solid;
-  border-top-width: 0px;
+  padding: 6px 0px;
+  border-bottom-style: solid;
+  border-bottom-width: 1px;
 }
 body .contenedor .modals .cont_modals .modal .cont_modal .cont_info .info_modal .process_carro .process_carro_restantes .restantes_detalle_item .restantes_detalle_nombre {
   width: calc(100% - 120px);
